--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <label for="textarea">Any additional comments:</label>
             <br>
             <textarea name="add-com" id="#comments" cols="30" rows="10"></textarea>
+            <br>
+            <button>Submit</button>
         </form>
     </body>
 </html>
