--- a/index.html
+++ b/index.html
@@ -4,36 +4,52 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Survey Form</title>
-        <meta name="description" content="Survey Form for my design basics">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <h1 id="title">Survey Form</h1>
-        <p id="description">
-            This survey for is to collect information on SIHS students in the WhoAmI Program.
-        </p>
-        <!-- TODO Update the action and method when I create my database -->
-        <form action="#" id="survey-form">
-            <label for="email" id="name-label">Full name:</label>
-            <input type="text" id="name" placeholder="Enter your name">
-            <br>
-            <!-- an email that is not formatted correctly, I will see an HTML5 validation error. -->
-            <label for="email" id="email-label">Email:</label>
-            <input type="email" id="email" placeholder="Enter your email">
-            <br>
-            <label for="grade" id="number-label">Your Grade (between 10 and 12):</label>
-            <input type="number" id="number" name="grade" min="10" max="12" placeholder="Enter the grade you are in currently">
-            <br>
-            <label for="textarea">Any additional comments:</label>
-            <br>
-            <textarea name="add-com" id="#comments" cols="30" rows="10"></textarea>
-            <br>
-            <button>Submit</button>
-        </form>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Survey Form</title>
+    <meta name="description" content="Survey Form for my design basics" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <h1 id="title">Survey Form</h1>
+      <p id="description">
+        This survey for is to collect information on SIHS students in the WhoAmI
+        Program.
+      </p>
+      <!-- TODO Update the action and method when I create my database -->
+      <form action="#" id="survey-form">
+        <div class="input_field">
+          <label for="name" id="name-label">Full name:</label>
+          <input type="text" id="name" placeholder="Enter your name" />
+        </div>
+        <!-- an email that is not formatted correctly, I will see an HTML5 validation error. -->
+        <div class="input_field">
+          <label for="email" id="email-label">Email:</label>
+          <input type="email" id="email" placeholder="Enter your email" />
+        </div>
+        <div class="input_field">
+          <label for="grade" id="number-label">Your Grade (between 10 and 12):</label>
+          <input
+            type="number"
+            id="number"
+            name="grade"
+            min="10"
+            max="12"
+            placeholder="Enter the grade you are in currently"
+          />
+        </div>
+        <div class="input_field">
+          <label for="textarea">Any additional comments:</label>
+          <br />
+          <textarea name="add-com" id="#textarea"></textarea>
+        </div>
+        <div class="inputfield">
+            <input type="submit" value="Submit" class="btn">
+        </div>
+      </form>
+    </div>
+  </body>
 </html>
