--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
       <form action="#" id="survey-form">
         <div class="input_field">
           <label for="name" id="name-label">Full name:</label>
-          <input type="text" id="name" placeholder="Enter your name" />
+          <input type="text" id="name" required placeholder="Enter your name" />
         </div>
         <!-- an email that is not formatted correctly, I will see an HTML5 validation error. -->
         <div class="input_field">
           <label for="email" id="email-label">Email:</label>
-          <input type="email" id="email" placeholder="Enter your email" />
+          <input type="email" id="email" required placeholder="Enter your email" />
         </div>
         <div class="input_field">
           <label for="grade" id="number-label">Your Grade (between 10 and 12):</label>
@@ -42,15 +42,36 @@
           />
         </div>
         <div class="input_field">
+          <label for="email" id="checkbox-label">What cohort are you in:</label>
+
+          <select name="cohort" id="dropdown">
+            <option value="Cohort A">Cohort A</option>
+            <option value="Cohort B">Cohort B</option>
+            <option value="Cohort C">Cohort C</option>
+            <option value="Cohort D">Cohort D</option>
+            <option value="Cohort E">Cohort E</option>
+          </select>
+        </div>
+        <div class="input_field">
+          <p>Are you part of a club</p>
+          <input type="radio" name="club" id="radiobtn1" value="Music Club">
+          <label for="radiobtn1" >Music Club</label>
+          <input type="radio" name="club" id="radiobtn1" value="Music Club">
+          <label for="radiobtn1" >Music Club</label>
+          <input type="radio" name="club" id="radiobtn1" value="Music Club">
+          <label for="radiobtn1" >Music Club</label>
+        </div>
+        <div class="input_field">
           <label for="textarea">Any additional comments:</label>
           <br />
           <textarea name="add-com" id="#textarea"></textarea>
         </div>
         <div class="inputfield">
-            <input type="submit" value="Submit" class="btn">
+            <input type="submit" value="Submit" class="btn" id="submit">
         </div>
       </form>
     </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
+ 
