Added all userstories, need to perfect css

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
           />
         </div>
         <div class="input_field">
-          <label for="email" id="checkbox-label">What cohort are you in:</label>
-
+          <label for="email" id="checkbox-label">What cohort are you in:</label> <br>
           <select name="cohort" id="dropdown">
             <option value="Cohort A">Cohort A</option>
             <option value="Cohort B">Cohort B</option>
@@ -53,13 +52,18 @@
           </select>
         </div>
         <div class="input_field">
-          <p>Are you part of a club</p>
+          <p>Are you part of a club?</p>
           <input type="radio" name="club" id="radiobtn1" value="Music Club">
-          <label for="radiobtn1" >Music Club</label>
+          <label for="radiobtn1" >Yes</label><br>
           <input type="radio" name="club" id="radiobtn1" value="Music Club">
-          <label for="radiobtn1" >Music Club</label>
-          <input type="radio" name="club" id="radiobtn1" value="Music Club">
-          <label for="radiobtn1" >Music Club</label>
+          <label for="radiobtn1" >No</label>
+        </div>
+        <div  class="input_field">
+          <p>What club are you apart of?</p>
+          <input type="checkbox" id="yes_box" name="vehicle1" value="Bike">
+          <label for="yes_box">Yes</label><br>
+          <input type="checkbox" id="no_box" name="vehicle1" value="Bike">
+          <label for="no_box">No</label><br>
         </div>
         <div class="input_field">
           <label for="textarea">Any additional comments:</label>
