--- a/index.html
+++ b/index.html
@@ -7,38 +7,35 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Survey Form</title>
-    <meta name="description" content="Survey Form for my design basics" />
+    <title>Log In</title>
+    <meta name="description" content="Log in page for library webapp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="wrapper">
-      <h1 id="title">Book Registration Form</h1>
-      <p id="description">
-        Enter book information about any new book added to the library.
-      </p>
+      <h1 id="title-login">Log In</h1>
       <!-- TODO Update the action and method when I create my database -->
-      <form action="#" id="registration-form">
-        <div class="input_field">
-          <label for="booktitle" id="title-label">Book Title:</label>
-          <input type="text" id="book" required/>
-        </div>
+      <form action="#" id="survey-form">
         <!-- an email that is not formatted correctly, I will see an HTML5 validation error. -->
         <div class="input_field">
-          <label for="author" id="author-label">Author's Name:</label>
-          <input type="text" id="author" required/>
+          <label for="email" id="email-label">Email:</label>
+          <input type="email" id="email" required placeholder="Enter your email" />
         </div>
+        <!-- Password field -->
         <div class="input_field">
-          <label for="shelf" id="shelf-label">Shelf Number:</label>
-          <input type="text" id="shelf" required/>
-        </div>
+          <label for="password" id="password-label">Password:</label>
+          <input type="password" id="password" required placeholder="Password" />
+        </div>        
+        <!-- successful submission leads to Registration page -->
         <div class="inputfield">
-            <input type="submit" value="Submit" class="btn" id="submit">
+            <input type="submit" value="Submit" class="btn" id="submit" onclick="document.location='index.html'">
         </div>
       </form>
     </div>
-    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
+    <script>
+      
+    </script>
   </body>
 </html>
  
